data/derived/comb/progs/unify/prog1671.ml.out
Characters 514-529:
  eval (e3, x,y))** 2.0) /. (eval (e3, x, y) * sqrt (2 *. pi))
                             ^^^^^^^^^^^^^^^
Error: This expression has type float but an expression was expected of type
         int
